[metadata]
name = LightCraft
version = 1.0.0
author = Schizo Studios
author_email = contact@schizostudios.org
description = Light-based metaphysical rendering engine from Schizo Studios.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://schizostudios.org
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    numpy
    pillow
    imageio
    moviepy

[options.entry_points]
console_scripts =
    lightcraft = lightcraft.__main__:main

[options.package_data]
* = *.pytoui, *.rst, *.md

[bdist_wheel]
universal = 11
