[metadata]
name = LightCraft
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CraftingBuilds/LightCraft
author = CraftingBuilds/SchizoStudios
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = lightcraft
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    lightcraft=lightcraft:main
[build_ext]
inplace = 1
